# profile

./: Cargo.toml  Dockerfile  README.md  dist-workspace.toml  switch_branch.sh
.github/workflows/: build.yml
docs/: gpu-setup.md  ground-truth-metrics.md  roadmap.md
scripts/: gpu-setup.sh  start.sh  test.sh
src/: lib.rs  main.rs
src/cli/: diagnose.rs  info.rs  mod.rs  profile.rs  run.rs
src/cmd/: info.rs  mod.rs  profile.rs
src/collectors/: gpu.rs  mod.rs  power.rs  sampling.rs  tokens.rs  types.rs  vllm.rs
src/engine/: mod.rs
src/profiler/: mod.rs
tests/: cli_tests.rs
