[package]
name = "infer-profiler"
version = "0.1.0"
edition = "2021"
authors = ["Perry <jungledesh@gmail.com>"]
description = "Rust-based CLI tool for profiling vLLM GPU and other metrics."

[[bin]]
name = "infer-pro"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
