[package]
name = "profile"
version = "0.1.0"
edition = "2021"
authors = ["Perry <jungledesh@gmail.com>"]
description = "Rust-based CLI tool for profiling vLLM GPU and other metrics."

[[bin]]
name = "profile"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
nvml-wrapper = "0.12"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3"
