[package]
name = "profile"
version = "0.1.0"
edition = "2021"
authors = ["Perry <jungledesh@gmail.com>"]
description = "Rust-based CLI tool for profiling vLLM GPU and other metrics."
repository = "https://github.com/jungledesh/profile"

[[bin]]
name = "profile"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
nvml-wrapper = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
prometheus-parse = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1 
strip = true

